--- a/Quiskit.ipynb
+++ b/Quiskit.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "IBMQ.save_account('cf9905df08d4ad675788fc022e45c8e757ae1aad60af6cb9c29cff3bbafce995db8bf9f1e5a184579bbfb63d9165cb5277e2feeb75a0c0633de921f44cd181a3')"
+    "IBMQ.save_account(' *** Enter your IBM ID here *** ')"
    ]
   },
   {
