--- a/Qiskit Playground.ipynb
+++ b/Qiskit Playground.ipynb
@@ -28,7 +28,7 @@
     "import qiskit\n",
     "qiskit.__qiskit_version__\n",
     "from qiskit import IBMQ\n",
-    "IBMQ.save_account('cf9905df08d4ad675788fc022e45c8e757ae1aad60af6cb9c29cff3bbafce995db8bf9f1e5a184579bbfb63d9165cb5277e2feeb75a0c0633de921f44cd181a3')\n",
+    "IBMQ.save_account(' *** Plac your IBM ID here *** ')\n",
     "IBMQ.load_account()\n"
    ]
   },
