--- a/QiskitPlayground.ipynb
+++ b/QiskitPlayground.ipynb
@@ -9,9 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "configrc.store_credentials:WARNING:2021-09-01 10:18:15,911: Credentials already present. Set overwrite=True to overwrite.\n",
-      "C:\\Users\\cyrus\\anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\ibmqfactory.py:192: UserWarning: Timestamps in IBMQ backend properties, jobs, and job results are all now in local time instead of UTC.\n",
-      "  warnings.warn('Timestamps in IBMQ backend properties, jobs, and job results '\n"
+      ""
      ]
     },
     {
@@ -30,7 +28,7 @@
     "import qiskit\n",
     "qiskit.__qiskit_version__\n",
     "from qiskit import IBMQ\n",
-    "IBMQ.save_account('cf9905df08d4ad675788fc022e45c8e757ae1aad60af6cb9c29cff3bbafce995db8bf9f1e5a184579bbfb63d9165cb5277e2feeb75a0c0633de921f44cd181a3')\n",
+    "IBMQ.save_account('*** Insert IBM ID here ***')\n",
     "IBMQ.load_account()"
    ]
   },
@@ -126,9 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cyrus\\anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\ibmqfactory.py:192: UserWarning: Timestamps in IBMQ backend properties, jobs, and job results are all now in local time instead of UTC.\n",
-      "  warnings.warn('Timestamps in IBMQ backend properties, jobs, and job results '\n",
-      "ibmqfactory.load_account:WARNING:2021-09-01 10:58:22,069: Credentials are already in use. The existing account in the session will be replaced.\n"
+      ""
      ]
     },
     {
